# quran-timings-api

./: .gitignore  .oxfmtrc.json  Makefile  README.md  main.py  package-lock.json  package.json  pyproject.toml
data/: detect_reciters.json  quran.json  quran_text_uthmani_v1.json  reciter_catalog.json  reciters.json  vocab.json
manifests/: abdulbaset_warsh_1_87_114.csv  abdurrahmaan_as-sudays_1_87_114.csv  all_reciters_s055.csv  all_reciters_s056.csv  all_reciters_s060.csv  sa3ood_al-shuraym_87_114.csv  sa3ood_al-shuraym_fatiha.csv  ui_refresh_4reciters_no19.csv  ui_refresh_4reciters_no19_missing71.csv  yasser_87_114_missing.csv  yasser_ad-dussary_s055_rerun.csv  yasser_al_balad.csv  yasser_al_humazah.csv  yasser_fatiha.csv  yasser_maryam.csv  yasser_s105.csv  yasser_s106.csv  yasser_s107.csv  yasser_s108.csv  yasser_s109.csv  yasser_s110.csv  yasser_s111.csv  yasser_s112.csv  yasser_s113.csv  yasser_s114.csv
scripts/: build_benchmark_data.py  build_full_corpus.py  run_last30_qcom_everyayah.py  run_last50_active_then_expand.py  run_ui_refresh_from_scratch.py  run_ui_surah_range.py  sync_ui_from_latest_runs.py
tests/: test_alignment_mapping.py  test_benchmark_data.py  test_cli_detect_modes.py  test_core_http.py  test_detect.py  test_engine_registry.py  test_existing_timing_resolver.py  test_existing_validation.py  test_gold_labeling.py  test_gold_validation.py  test_mfa_aligner.py  test_nemo_runner.py  test_pipeline_integration.py  test_pipeline_qc_metadata.py  test_pipeline_supervision_branching.py  test_reciters.py  test_schema_qc.py  test_source_adapters.py  (+8 more)
(+2480 files in other folders)
