[project]
name = "quran-audio-data"
version = "0.1.0"
description = "Batch Quran audio timing extraction (ayah + word)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.5",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "numpy>=2.1.1",
  "soundfile>=0.12.1",
  "rapidfuzz>=3.10.1",
  "orjson>=3.10.7",
  "httpx>=0.28.1",
  "tenacity>=9.0.0",
  "rich>=13.9.4",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.5.0",
  "torchaudio>=2.5.0",
  "nemo_toolkit[asr]>=2.0.0",
  "whisperx>=3.3.1",
]
gpu = [
  "torch>=2.5.0",
  "torchaudio>=2.5.0",
  "nemo_toolkit[asr]>=2.0.0",
  "whisperx>=3.3.1",
]
mfa = ["montreal-forced-aligner>=3.2.0"]
audio = ["librosa>=0.10.2.post1", "webrtcvad>=2.0.10"]
dev = ["pytest>=8.3.3", "pytest-cov>=5.0.0", "hypothesis>=6.112.1"]

[project.scripts]
qad = "quran_audio_data.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quran_audio_data"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
